ticket193 solved for DATIONs and simpleType